# discord_Bot

./: .replit  FF14_site.py  bot.py  keep_alive.py  loadReload.py  pyproject.toml  requirements  requirements.txt  setting.json  test.py
cogs/: BlueArchive_Hard.py  BlueArchive_Normal.py  FF14.py  FF14_item_market.py  FF14_site.py  embeds.py  hello.py
common/: blueArchiveJPWiki_Nornal.py  last_news.json  setting.json
