[tool.poetry]
name = "repl_nix_discordBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "^2.2.2"
pandas = "^1.5.2"
requests = "^2.28.1"
bs4 = "^0.0.1"
discord = "^2.1.0"
gevent = "^22.10.2"
waitress = "^2.1.2"
beautifulsoup4 = "^4.14.3"
discord-py = "^2.6.4"
aiohttp = "^3.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
